--- a/src/assets/styles/pages/_cardStyle.scss
+++ b/src/assets/styles/pages/_cardStyle.scss
@@ -4,21 +4,51 @@
     .title{
         position: relative;
         padding:10px;
-    }
+        }
     .newsBody{
-        display: flex;
         margin: 1rem 0;
+        @media (max-width:375px) {
+            display: block;
+        }
+        @media (min-width:375px) {
+            display: flex;
+        }
+        
         img{
             width: 50%;
             height: 50%;
         }
         .des{
-            position: absolute;
+            
             width: 50%;
             top: 20%;
-            -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-            transform: translateX(100%);
+
+            @media (max-width:768px) {
+                position: relative;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            @media (min-width:768px) {
+                position: absolute;
+                -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
+                transform: translateX(100%);
+            }
+
+            p{
+                margin: 10px;
+            }
+
+            .seeMore{
+                text-decoration: none;
+                background-color: black;
+                padding:2px 10px;
+                border-radius: 15px;
+                color: aliceblue;
+            }
         }
     }
+
+
+
 }
