--- a/src/assets/styles/pages/_searchPage.scss
+++ b/src/assets/styles/pages/_searchPage.scss
@@ -7,12 +7,19 @@
     img{
         margin-right: 1rem;
     }
-    .PiraNews{
+    .piraNews{
         padding-top: 10px;
         font-family: 'Palette Mosaic', cursive;
         font-size: x-large;
     }
 }
+
+.looding{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
+
 
 .searchbar-con{
     text-align: center;
@@ -40,8 +47,9 @@
     .newsCard{  
 
         @media (max-width:375px) {
-            width: 50%;
+            width: 90%;
         }
+            
         @media (min-width:375px) {
             width: 90%;
         }
